--- a/API_Change_Log.html
+++ b/API_Change_Log.html
@@ -12,6 +12,10 @@
 <body>
    <h1 id="bink-api-changelog">Bink API Changelog</h1>
    <hr>
+   <h2 id="24-06-2022">24/06/2022</h2>
+   <ol>
+      <li>Amended the PUT /loyalty_cards/{loyalty_card_id}/authorise logic to require an add credential in the request payload.</li>
+   </ol>
    <h2 id="28-03-2022">28/03/2022</h2>
    <ol>
       <li>Added the following fields to payment_accounts object in GET /wallet and GET /wallet_overview: issuer, type, country, currency_code, last_four_digits.</li>
