--- a/extras/changelog.html
+++ b/extras/changelog.html
@@ -12,6 +12,16 @@
 <body>
    <h1 id="bink-api-changelog">Bink API Changelog</h1>
    <hr>
+   <h2 id="23-01-2023">23/01/2023</h2>
+   <ol>
+      <li>Added new "Pending" status and "conversion_date" field to vouchers object in GET /loyalty_cards/{loyalty_card_id}/vouchers, GET /wallet and GET /wallet/{loyalty_cards}/{loyalty_card_id}.</li>
+   </ol>
+   <h2 id="09-11-2022">09/11/2022</h2>
+   <ol>
+      <li>Added GET /wallet/payment_account_links endpoint.</li>
+      <li>Added POST /loyalty_cards/add_trusted endpoint.</li>
+      <li>Added PUT /loyalty_cards/{loyalty_card_id}/add_trusted endpoint.</li>
+   </ol>
    <h2 id="24-06-2022">24/06/2022</h2>
    <ol>
       <li>Amended the PUT /loyalty_cards/{loyalty_card_id}/authorise logic to require an add credential in the request payload.</li>
