updated changelog to include new fields for Loyalty Plan endpoints

--- a/extras/changelog.html
+++ b/extras/changelog.html
@@ -12,6 +12,11 @@
 <body>
    <h1 id="bink-api-changelog">Bink API Changelog</h1>
    <hr>
+   <h2 id="22-05-2023">22/05/2023</h2>
+   <ol>
+      <li>Added new "forgotten_password_url" field to plan_details object in GET /loyalty_plans, GET /loyalty_plans/{loyalty_plan_id}, GET /loyalty_plans_overview and GET /loyalty_plans/{loyalty_plan_id}/plan_details.</li>
+      <li>Added new "validation_description" field to journey_fields.credentials object in GET /loyalty_plans, GET /loyalty_plans/{loyalty_plan_id} and GET /loyalty_plans/{loyalty_plan_id}/journey_fields</li>
+   </ol>
    <h2 id="23-01-2023">23/01/2023</h2>
    <ol>
       <li>Added new "Pending" status and "conversion_date" field to vouchers object in GET /loyalty_cards/{loyalty_card_id}/vouchers, GET /wallet and GET /wallet/{loyalty_cards}/{loyalty_card_id}.</li>
