changed webhook api

--- a/events/index.html
+++ b/events/index.html
@@ -10,7 +10,7 @@
    <title>Bink Event Catalogue</title>
   <style>
     body {
-      background-color: rgb(91, 224, 202);
+      background-color: #057EA8;
       font-family: Arial, sans-serif;
       margin: 0;
       padding: 0;
@@ -34,11 +34,12 @@
       flex-wrap: wrap;
       justify-content: space-around;
       padding: 20px;
+      border-radius: 50px 50px 50px 50px;
     }
 
     .link-container a {
-      background-color: rgb(5, 126, 168);
-      color: white;
+      background-color: #71F9D3;
+      color: #141E33;
       text-decoration: none;
       padding: 10px 20px;
       border-radius: 5px;
