--- a/webhook/webhook.html
+++ b/webhook/webhook.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Bink API v2</title>
+    <title>Bink Webhook Specification</title>
     <!-- needed for adaptive design -->
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1">
