created distinct folder for loyalty card management

--- a/events/index.html
+++ b/events/index.html
@@ -60,7 +60,7 @@
   </header>
 
   <div class="link-container">
-    <a href="loyalty_management">Loyalty Card Management</a>
+    <a href="loyalty_card_management">Loyalty Card Management</a>
     <a href="reporting_mi">Reporting and MI</a>
     <a href="#">BPL coming soon</a>
     </div>
