updated streaming webhook spec and index

--- a/events/index.html
+++ b/events/index.html
@@ -71,7 +71,7 @@
       <h3>Loyalty Management</h3>
       <a href="loyalty_card_management">Loyalty Card Management</a>
       <br/>
-      <a href="loyalty_card_management">User and Wallet</a>
+      <a href="user_and_wallet">User and Wallet</a>
     </div>
     <div class="link-item">
       <h3>Reporting and MI</h3>
